# visionpdftext

./: .gitignore  CONVENTIONS.md  README.md  pdf_to_text.py  pyproject.toml
visionpdftext/: __init__.py  __main__.py
